--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -151,7 +151,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <a th:href="@{/user/cart/checkout(cartId=${session.cartId})}"
+                            <a th:href="@{/user/checkout}"
                                class="axil-btn btn-bg-primary checkout-btn">Process to
                                 Checkout</a>
                         </div>
