--- a/src/main/resources/templates/common-user/content.html
+++ b/src/main/resources/templates/common-user/content.html
@@ -19,13 +19,13 @@
                                     <div class="item-rating">
                                         <div class="thumb">
                                             <ul>
-                                                <li><img th:src="@{etrade/assets/images/others/author1.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author2.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author3.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author4.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
                                                          alt="Author"></li>
                                             </ul>
                                         </div>
@@ -55,13 +55,13 @@
                                     <div class="item-rating">
                                         <div class="thumb">
                                             <ul>
-                                                <li><img th:src="@{etrade/assets/images/others/author1.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author2.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author3.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author4.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
                                                          alt="Author"></li>
                                             </ul>
                                         </div>
@@ -91,13 +91,13 @@
                                     <div class="item-rating">
                                         <div class="thumb">
                                             <ul>
-                                                <li><img th:src="@{etrade/assets/images/others/author1.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author2.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author3.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author4.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
                                                          alt="Author"></li>
                                             </ul>
                                         </div>
@@ -127,13 +127,13 @@
                                     <div class="item-rating">
                                         <div class="thumb">
                                             <ul>
-                                                <li><img th:src="@{etrade/assets/images/others/author1.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author1.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author2.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author2.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author3.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author3.png}"
                                                          alt="Author"></li>
-                                                <li><img th:src="@{etrade/assets/images/others/author4.png}"
+                                                <li><img th:src="@{/etrade/assets/images/others/author4.png}"
                                                          alt="Author"></li>
                                             </ul>
                                         </div>
@@ -160,7 +160,7 @@
                         <div class="slider-thumb-activation-one axil-slick-dots">
                             <div class="single-slide slick-slide" data-sal="slide-up" data-sal-delay="600"
                                  data-sal-duration="1500">
-                                <img th:src="@{etrade/assets/images/product/product-38.png}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/product/product-38.png}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
                                     <span class="price-amount">$49.00</span>
@@ -168,21 +168,21 @@
                             </div>
                             <div class="single-slide slick-slide" data-sal="slide-up" data-sal-delay="600"
                                  data-sal-duration="1500">
-                                <img th:src="@{etrade/assets/images/product/product-39.png}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/product/product-39.png}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
                                     <span class="price-amount">$49.00</span>
                                 </div>
                             </div>
                             <div class="single-slide slick-slide">
-                                <img th:src="@{etrade/assets/images/product/lenovo-gaming.jpg}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/product/lenovo-gaming.jpg}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
                                     <span class="price-amount">$99.00</span>
                                 </div>
                             </div>
                             <div class="single-slide slick-slide">
-                                <img th:src="@{etrade/assets/images/product/RoboCharge.jpg}" alt="Product">
+                                <img th:src="@{/etrade/assets/images/product/RoboCharge.jpg}" alt="Product">
                                 <div class="product-price">
                                     <span class="text">From</span>
                                     <span class="price-amount">$29.00</span>
@@ -194,8 +194,8 @@
             </div>
         </div>
         <ul class="shape-group">
-            <li class="shape-1"><img th:src="@{etrade/assets/images/others/shape-1.png}" alt="Shape"></li>
-            <li class="shape-2"><img th:src="@{etrade/assets/images/others/shape-2.png}" alt="Shape"></li>
+            <li class="shape-1"><img th:src="@{/etrade/assets/images/others/shape-1.png}" alt="Shape"></li>
+            <li class="shape-2"><img th:src="@{/etrade/assets/images/others/shape-2.png}" alt="Shape"></li>
         </ul>
     </div>
 
@@ -309,7 +309,7 @@
                 <div class="slick-single-layout">
                     <div class="categrie-product">
                         <a href="#">
-                            <img class="img-fluid" th:src="@{etrade/assets/images/product/categories/elec-10.png}"
+                            <img class="img-fluid" th:src="@{/etrade/assets/images/product/categories/elec-10.png}"
                                  alt="product categorie">
                             <h6 class="cat-title">Camera & Photo</h6>
                         </a>
@@ -334,7 +334,7 @@
     <!-- End Categorie Area  -->
 
     <!-- Poster Countdown Area  -->
-    <div th:insert="~{poster-area}" class="axil-poster-countdown">
+    <div th:frament="poster-area" class="axil-poster-countdown">
         <div class="container">
             <div class="poster-countdown-wrap bg-lighter">
                 <div class="row">
@@ -477,7 +477,7 @@
                             <div class="thumbnail">
                                 <a href="single-product.html">
                                     <img data-sal="zoom-in" data-sal-delay="100" data-sal-duration="1500"
-                                         th:src="@{etrade/assets/images/product/electric/product-09.png}"
+                                         th:src="@{/etrade/assets/images/product/electric/product-09.png}"
                                          alt="Yantiti Leather Bags">
                                 </a>
                             </div>
@@ -746,7 +746,7 @@
                 <div class="col">
                     <div class="service-box">
                         <div class="icon">
-                            <img th:src="@{etrade/assets/images/icons/service7.png}" alt="Service">
+                            <img th:src="@{/etrade/assets/images/icons/service7.png}" alt="Service">
                         </div>
                         <h6 class="title">100% Guarantee On Product</h6>
                     </div>
@@ -770,7 +770,7 @@
                 <div class="col">
                     <div class="service-box">
                         <div class="icon">
-                            <img th:src="@{etrade/assets/images/icons/service10.png}" alt="Service">
+                            <img th:src="@{/etrade/assets/images/icons/service10.png}" alt="Service">
                         </div>
                         <h6 class="title">Next Level Pro Quality</h6>
                     </div>
