--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -11,8 +11,8 @@
     <div class="signin-header">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <a th:href="@{/user}" class="site-logo"><img th:src="@{/etrade/assets/images/logo/logo.png}"
-                                                             alt="logo"></a>
+                <a th:href="@{/user/home}" class="site-logo"><img th:src="@{/etrade/assets/images/logo/logo.png}"
+                                                                  alt="logo"></a>
             </div>
             <div class="col-md-6">
                 <div class="singin-header-btn">
