--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -58,11 +58,16 @@
                                                     </button>
                                                 </li>
                                             </form>
-                                            <!--                                            <a th:href="@{/user/cart/add-to-card}">-->
-                                            <!--                                                Add to Cart-->
-                                            <!--                                            </a>-->
                                         </li>
-                                        <li class="wishlist"><a href="wishlist.html"><i class="far fa-heart"></i></a>
+                                        <li class="wishlist">
+                                            <form th:action="@{/user/wishlist/insert}" method="post"
+                                                  class="wishlist-form">
+                                                <input type="hidden" name="wishlistId" th:value="${session.wishlistId}">
+                                                <input type="hidden" name="productId" th:value="${product.id}">
+                                                <button type="submit" class="wishlist-btn">
+                                                    <i class="far fa-heart"></i>
+                                                </button>
+                                            </form>
                                         </li>
                                     </ul>
                                 </div>
@@ -125,7 +130,7 @@
 <div th:insert="~{common-user/script :: script}"></div>
 
 <script>
-    
+
     document.querySelectorAll('#form-add-to-cart').forEach(form => {
         form.addEventListener('submit', function (event) {
             event.preventDefault();
@@ -144,6 +149,27 @@
                     console.error('Lỗi: ' + error);
                     alert('Có lỗi xảy ra.');
                 })
+        });
+    });
+
+    document.querySelectorAll('.wishlist-form').forEach(form => {
+        form.addEventListener('submit', function (e) {
+            e.preventDefault(); // Ngăn tải lại trang
+            const formData = new FormData(this);
+            const actionUrl = this.getAttribute('action');
+
+            fetch(actionUrl, {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.text())
+                .then(data => {
+                    alert(data); // Thông báo thành công
+                })
+                .catch(error => {
+                    console.error('Lỗi:', error);
+                    alert('Có lỗi xảy ra!');
+                });
         });
     });
 </script>
