--- a/src/main/resources/templates/common-admin/sidebar.html
+++ b/src/main/resources/templates/common-admin/sidebar.html
@@ -177,7 +177,7 @@
                         </ul>
                     </li>
                     <li class=" ">
-                        <a href="#return" class="collapsed" data-toggle="collapse" aria-expanded="false">
+                        <a th:href="@{/user/home}" class=" ">
                             <svg class="svg-icon" id="p-dash6" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                  stroke-linecap="round" stroke-linejoin="round">
@@ -186,26 +186,8 @@
                                 <line x1="14" y1="10" x2="21" y2="3"></line>
                                 <line x1="3" y1="21" x2="10" y2="14"></line>
                             </svg>
-                            <span class="ml-4">Returns</span>
-                            <svg class="svg-icon iq-arrow-right arrow-active" width="20" height="20"
-                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <polyline points="10 15 15 20 20 15"></polyline>
-                                <path d="M4 4h7a4 4 0 0 1 4 4v12"></path>
-                            </svg>
+                            <span class="ml-4">Returns Home</span>
                         </a>
-                        <ul id="return" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
-                            <li class="">
-                                <a href="page-list-returns.html">
-                                    <i class="las la-minus"></i><span>List Returns</span>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a href="page-add-return.html">
-                                    <i class="las la-minus"></i><span>Add Return</span>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="">
                         <a href="page-report.html" class="">
