--- a/src/main/resources/templates/common-user/header-style-5.html
+++ b/src/main/resources/templates/common-user/header-style-5.html
@@ -46,10 +46,10 @@
         <div class="container">
             <div class="header-navbar">
                 <div class="header-brand">
-                    <a th:href="@{/user}" class="logo logo-dark">
+                    <a th:href="@{/user/home}" class="logo logo-dark">
                         <img th:src="@{/etrade/assets/images/logo/logo.png}" alt="Site Logo">
                     </a>
-                    <a th:href="@{/user}" class="logo logo-light">
+                    <a th:href="@{/user/home}" class="logo logo-light">
                         <img th:src="@{/etrade/assets/images/logo/logo-light.png}" alt="Site Logo">
                     </a>
                 </div>
@@ -59,7 +59,7 @@
                         <ul class="mainmenu">
                             <!--              Start home-->
                             <li>
-                                <a th:href="@{/user}">Home</a>
+                                <a th:href="@{/user/home}">Home</a>
                             </li>
                             <!--              End home-->
 
@@ -112,13 +112,18 @@
                             </a>
                         </li>
                         <li class="wishlist">
-                            <a href="wishlist.html">
+                            <a th:href="@{/user/wishlist(wishlistId=${session.wishlistId})}">
+                                <p class="cart-count"
+                                   th:if="${session.countWishlist > 0}"
+                                   th:text="${session.countWishlist}"></p>
                                 <i class="flaticon-heart"></i>
                             </a>
                         </li>
                         <li class="shopping-cart">
-                            <a href="#" class="cart-dropdown-btn">
-                                <span class="cart-count">3</span>
+                            <a th:href="@{/user/cart(cartId=${session.cartId})}" class="cart-dropdown-btn">
+                                <span class="cart-count"
+                                      th:if="${session.quantityItems > 0}"
+                                      th:text="${session.quantityItems}"></span>
                                 <i class="flaticon-shopping-cart"></i>
                             </a>
                         </li>
@@ -128,12 +133,12 @@
                             </a>
                             <div class="my-account-dropdown">
                                 <span class="title">QUICKLINKS</span>
-                                <ul>
+                                <ul th:if="${#authentication.principal != null && #authentication.principal != 'anonymousUser'}">
                                     <li>
                                         <a th:href="@{/user/my-account}">My Account</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Initiate return</a>
+                                    <li th:if="${#strings.equalsIgnoreCase(session.userSession.role.name,'admin')}">
+                                        <a th:href="@{/admin/dashboard}">Dashboard Admin</a>
                                     </li>
                                     <li>
                                         <a href="#">Support</a>
@@ -142,9 +147,12 @@
                                         <a href="#">Language</a>
                                     </li>
                                 </ul>
-                                <a th:href="@{/login}" class="axil-btn btn-bg-primary"
-                                   onclick="logout()"
-                                >Login</a>
+                                <div class="login-btn">
+                                    <a th:if="${#authentication.principal != 'anonymousUser'}" th:href="@{/logout}"
+                                       class="axil-btn btn-bg-primary">Logout</a>
+                                    <a th:if="${#authentication.principal == 'anonymousUser'}" th:href="@{/login}"
+                                       class="axil-btn btn-bg-primary">Login</a>
+                                </div>
                                 <div class="reg-footer text-center">No account yet? <a th:href="@{/register}"
                                                                                        class="btn-link">REGISTER
                                     HERE.</a></div>
