--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,7 +10,8 @@
     <div th:fragment="background-signin" class="signin-header">
         <div class="row align-items-center">
             <div class="col-sm-4">
-                <a th:href="@{/user}" class="site-logo"><img th:src="@{etrade/assets/images/logo/logo.png}" alt="logo"></a>
+                <a th:href="@{/user/home}" class="site-logo"><img th:src="@{etrade/assets/images/logo/logo.png}"
+                                                                  alt="logo"></a>
             </div>
             <div class="col-sm-8">
                 <div class="singin-header-btn">
