--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -399,7 +399,7 @@
                                         <ul class="product-action d-flex-center mb--0">
                                             <li class="add-to-cart"><a href="cart.html" class="axil-btn btn-bg-primary">Add
                                                 to Cart</a></li>
-                                            <li class="wishlist"><a href="../../static/etrade/wishlist.html"
+                                            <li class="wishlist"><a href="wishlist.html"
                                                                     class="axil-btn wishlist-btn"><i
                                                     class="far fa-heart"></i></a></li>
                                         </ul>
