--- a/src/main/resources/templates/user/shop.html
+++ b/src/main/resources/templates/user/shop.html
@@ -111,7 +111,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -151,7 +151,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -194,7 +194,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -234,7 +234,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -277,7 +277,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -317,7 +317,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -360,7 +360,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -400,7 +400,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -443,7 +443,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -483,7 +483,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -526,7 +526,7 @@
                             </div>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -566,7 +566,7 @@
                             </a>
                             <div class="product-hover-action">
                                 <ul class="cart-action">
-                                    <li class="wishlist"><a href="../../static/etrade/wishlist.html"><i
+                                    <li class="wishlist"><a href="wishlist.html"><i
                                             class="far fa-heart"></i></a></li>
                                     <li class="select-option"><a href="cart.html">Add to Cart</a></li>
                                     <li class="quickview"><a href="#" data-bs-toggle="modal"
@@ -717,7 +717,7 @@
                                 <li><a href="../../static/etrade/my-account.html">My Account</a></li>
                                 <li><a href="sign-up.html">Login / Register</a></li>
                                 <li><a href="cart.html">Cart</a></li>
-                                <li><a href="../../static/etrade/wishlist.html">Wishlist</a></li>
+                                <li><a href="wishlist.html">Wishlist</a></li>
                                 <li><a href="shop.html">Shop</a></li>
                             </ul>
                         </div>
@@ -950,7 +950,7 @@
                                         <ul class="product-action d-flex-center mb--0">
                                             <li class="add-to-cart"><a href="cart.html" class="axil-btn btn-bg-primary">Add
                                                 to Cart</a></li>
-                                            <li class="wishlist"><a href="../../static/etrade/wishlist.html"
+                                            <li class="wishlist"><a href="wishlist.html"
                                                                     class="axil-btn wishlist-btn"><i
                                                     class="far fa-heart"></i></a></li>
                                         </ul>
@@ -1013,7 +1013,7 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="../../static/etrade/wishlist.html" class="cart-btn"><i
+                            <a href="wishlist.html" class="cart-btn"><i
                                     class="fal fa-heart"></i></a>
                         </div>
                     </div>
@@ -1043,7 +1043,7 @@
                         </div>
                         <div class="product-cart">
                             <a href="cart.html" class="cart-btn"><i class="fal fa-shopping-cart"></i></a>
-                            <a href="../../static/etrade/wishlist.html" class="cart-btn"><i
+                            <a href="wishlist.html" class="cart-btn"><i
                                     class="fal fa-heart"></i></a>
                         </div>
                     </div>
